
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
int _ismbcl0(unsigned int c)
{
  return (c >= 0x8140 && c <= 0x889e);
}
